# LightSky-GL-Loader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SDL2Config.cmake  lsgl_test.c  setup.py
lsgl/: __init__.py  __main__.py  generate_all.bat  glloader.py  vkloader.py
lsgl/templates/: lsgl_template.c  lsgl_template.h  lsvk_template.c  lsvk_template.h
lsgl/tests/: generate_all.bat  generate_all.sh  lsgl_test.c
tests/: generate_all.bat  generate_all.sh
